[gd_scene load_steps=3 format=1]

[ext_resource path="res://network_scanners/rfb_server_scanner/rfb_server_tester.gd" type="Script" id=1]
[ext_resource path="res://network_scanners/rfb_server_scanner/tcp_connection.tscn" type="PackedScene" id=2]

[node name="rfb_server_tester" type="Node"]

script/script = ExtResource( 1 )

[node name="tcp_connection" parent="." instance=ExtResource( 2 )]

[node name="abort_test_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false


